# midi-fart-sniffer

./: .gitignore  BUILD_FIX.md  CMakeLists.txt  Design.md  FEATURES.md  MidiDemo.jucer  PRD.md  README.md  TESTING.md
.github/workflows/: windows-build.yml
Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
